Fix segfault on quit

Reproducible segmentation fault when start practice a collection and
quit immediately from statistics main window without changing anything.
The segfault is only shown on console output. DrKonqi window doesn't
open. The segfault appears when ParleyDocument member is deleted in
ParleyMainWindows destructor. The destroyed signal of ParleyDocuments
KEduVocDocument member calls a slot to update the window cation which
want to access an already deleted KEduVocDocument pointer.
To fix this, the destroyed signal connection is removed before deleting
the ParleyDocument member in ParleyMainWindows destructor.

BUG: 420302
(cherry picked from commit 3a8c04e903f2f8ac66024a2c171641a1d6f6d7fa)